25-ый commit 14-ый спринт, домашняя работа

--- a/app/src/main/res/layout/activity_audioplayer.xml
+++ b/app/src/main/res/layout/activity_audioplayer.xml
@@ -68,7 +68,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/artistName"
-        app:srcCompat="@drawable/play_icon" />
+        app:srcCompat="@drawable/play_button_icon" />
 
     <ImageView
         android:id="@+id/addToPlaylist"
