--- a/app/src/main/res/layout/activity_medialibrary.xml
+++ b/app/src/main/res/layout/activity_medialibrary.xml
@@ -1,8 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.ui.MediaLibraryActivity">
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/header_margin">
+
+        <ImageButton
+            android:id="@+id/btnBack"
+            style="@style/HeaderBtnBackStyle"
+            android:visibility="visible"
+            app:srcCompat="@drawable/back_icon" />
+
+        <TextView
+            style="@style/HeaderTextViewStyle"
+            android:text="@string/medialibrary_text" />
+    </LinearLayout>
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
+        style="@style/FragmentTablayout"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/margin_48dp"
+        app:tabTextColor="?attr/colorOnPrimary" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
