--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -113,12 +113,37 @@
         <item name="android:minLines">3</item>
     </style>
 
+    <style name="MedialibraryGagTextView">
+        <item name="android:textSize">@dimen/text_size_19sp</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+
     <style name="refreshSearchButton">
         <item name="android:textSize">@dimen/text_size_14sp</item>
         <item name="android:textColor">?attr/colorPrimary</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:background">@drawable/refresh_shape</item>
+    </style>
+
+    <style name="TabTextAppearance" parent="TextAppearance.MaterialComponents.Button">
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="FragmentTablayout">
+        <item name="android:textSize">@dimen/text_size_22sp</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="background">?attr/colorOnPrimary</item>
+        <item name="tabIndicatorColor">?attr/colorOnPrimary</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="tabIndicatorFullWidth">true</item>
+        <item name="tabMode">fixed</item>
+        <item name="textAllCaps">false</item>
+        <item name="tabTextAppearance">@style/TabTextAppearance</item>
+
     </style>
 
     <style name="PlayerTrackInfoTextView">
