--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/MainLayoutVertical"
-    android:background="@color/Main_Background">
+    android:background="?attr/colorPrimary">
 
-    <TextView
-        style="@style/HeaderTextViewStyle"
-        android:text="@string/app_name"
-        android:layout_marginBottom="24dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="12dp"
-        android:textColor="@color/YP_White" />
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/rootFragmentContainerView"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="@dimen/empty_dp"
+        android:layout_height="@dimen/empty_dp"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/main_navigation_graph" />
 
-    <LinearLayout style="@style/MainLayoutVertical">
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="@dimen/empty_dp"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        app:itemIconTint="@drawable/selector_color"
+        app:itemRippleColor="?attr/colorOnPrimary"
+        app:itemTextColor="@drawable/selector_color"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_navigation_menu" />
 
-        <Button
-            android:id="@+id/btnSearch"
-            style="@style/MainBtnStyle"
-            android:text="@string/search_text"
-            app:icon="@drawable/search_icon" />
-
-        <Button
-            android:id="@+id/btnMedialibrary"
-            style="@style/MainBtnStyle"
-            android:text="@string/medialibrary_text"
-            app:icon="@drawable/medialibrary_icon" />
-
-        <Button
-            android:id="@+id/btnSettings"
-            style="@style/MainBtnStyle"
-            android:text="@string/settings_text"
-            app:icon="@drawable/settings_icon" />
-
-    </LinearLayout>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
