--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -136,7 +136,7 @@
     <style name="FragmentTablayout">
         <item name="android:textSize">@dimen/text_size_22sp</item>
         <item name="android:fontFamily">@font/ys_display_medium</item>
-        <item name="background">?attr/colorOnPrimary</item>
+        <item name="tabBackground">?attr/colorPrimary</item>
         <item name="tabIndicatorColor">?attr/colorOnPrimary</item>
         <item name="android:textColor">?attr/colorOnPrimary</item>
         <item name="tabIndicatorFullWidth">true</item>
