--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -5,15 +5,15 @@
     app:startDestination="@id/fragmentMediaLibrary">
     <fragment
         android:id="@+id/fragmentSettings"
-        android:name="com.example.playlistmaker.settings.ui.FragmentSettings"
+        android:name="com.example.playlistmaker.settings.ui.SettingsFragment"
         android:label="FragmentSettings" />
     <fragment
         android:id="@+id/fragmentMediaLibrary"
-        android:name="com.example.playlistmaker.medialibrary.FragmentMediaLibrary"
+        android:name="com.example.playlistmaker.medialibrary.MediaLibraryFragment"
         android:label="FragmentMediaLibrary" />
     <fragment
         android:id="@+id/fragmentSearch"
-        android:name="com.example.playlistmaker.search.ui.FragmentSearch"
+        android:name="com.example.playlistmaker.search.ui.SearchFragment"
         android:label="FragmentSearch">
         <action
             android:id="@+id/action_fragmentSearch_to_audioPlayerActivity"
