--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -40,6 +40,7 @@
     <dimen name="margin_46dp">46dp</dimen>
     <dimen name="margin_48dp">48dp</dimen>
     <dimen name="margin_55dp">55dp</dimen>
+    <dimen name="margin_106dp">106dp</dimen>
     <dimen name="margin_140dp">140dp</dimen>
     <dimen name="cover_size">45dp</dimen>
     <dimen name="image_size">24dp</dimen>
