--- a/app/src/main/res/layout/playlist_list.xml
+++ b/app/src/main/res/layout/playlist_list.xml
@@ -1,45 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="?android:attr/selectableItemBackground"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/coverPlaylist"
-        android:layout_width="@dimen/empty_dp"
-        android:layout_height="@dimen/empty_dp"
-        android:layout_margin="@dimen/margin_4dp"
-        android:background="@drawable/round_corner"
-        android:clickable="true"
-        android:scaleType="centerCrop"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="@dimen/cover_size"
+        android:layout_height="@dimen/cover_size"
+        android:layout_marginVertical="@dimen/margin_8dp"
+        android:layout_marginStart="@dimen/margin_13dp"
+        android:layout_marginEnd="@dimen/margin_8dp"
         app:srcCompat="@drawable/placeholder_ico" />
 
-    <TextView
-        android:id="@+id/titlePlaylist"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/playlistInfo"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_4dp"
-        android:fontFamily="@font/ys_text_regular"
-        android:maxLines="1"
-        android:textColor="?attr/colorOnPrimary"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/coverPlaylist" />
+        android:layout_marginVertical="@dimen/margin_14dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/trackCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_4dp"
-        android:fontFamily="@font/ys_text_regular"
-        android:maxLines="1"
-        android:textColor="?attr/colorOnPrimary"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/titlePlaylist" />
+        <TextView
+            android:id="@+id/titlePlaylist"
+            style="@style/TrackNameTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Название плейлиста" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/trackCount"
+            style="@style/TrackInfoTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="0 треков" />
+
+    </LinearLayout>
+</LinearLayout>
