--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -17,4 +17,5 @@
     <color name="Track_List_Name_color">@color/YP_White</color>
     <color name="Track_List_Under_Name_Color">@color/YP_White</color>
     <color name="Error_Search_Icon">@color/YP_White</color>
+    <color name="Bottom_Sheet_Holder">@color/YP_White</color>
 </resources>
