--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="YP_Grey">#AEAFB4</color>>
     <color name="YP_GreyLight">#E6E8EB</color>>
     <color name="YP_Red">#F56B6C</color>>
+    <color name="YP_Light">#E6E8EB</color>
     <color name="Switch_track">@color/YP_GreyLight</color>
     <color name="Switch_thumb">@color/YP_Grey</color>
     <color name="Icon_Tint">@color/YP_Grey</color>
@@ -18,4 +19,5 @@
     <color name="Track_List_Name_color">@color/YP_Black</color>
     <color name="Track_List_Under_Name_Color">@color/YP_Grey</color>error_search_icon
     <color name="Error_Search_Icon">@color/YP_Black</color>
+    <color name="Bottom_Sheet_Holder">@color/YP_Light</color>
 </resources>
