--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -189,4 +189,22 @@
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
     </style>
+
+    <style name="PlaylistCardTextView">
+        <item name="android:textSize">@dimen/text_size_12sp</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:fontFamily">@font/ys_text_regular</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
+    <style name="NewPlaylistHeaderTextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:textSize">@dimen/text_size_19sp</item>
+        <item name="fontFamily">@font/ys_display_medium</item>
+        <item name="android:layout_gravity">center</item>
+
+    </style>
+
 </resources>
