--- a/app/src/main/res/drawable/stroke_rectangle.xml
+++ b/app/src/main/res/drawable/stroke_rectangle.xml
@@ -4,7 +4,9 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/YP_Grey" />
+        android:color="@color/Input_Playlist" />
     <corners android:radius="8dp" />
+
+    <solid android:color="?attr/colorPrimary" />
 
 </shape>
