--- a/app/src/main/res/layout/fragment_audioplayer.xml
+++ b/app/src/main/res/layout/fragment_audioplayer.xml
@@ -283,6 +283,13 @@
             tools:text="Длительность" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <View
+        android:id="@+id/overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#99000000"
+        android:visibility="gone" />
+
     <LinearLayout
         android:id="@+id/standard_bottom_sheet"
         android:layout_width="match_parent"
