--- a/app/src/main/res/layout/fragment_new_playlist.xml
+++ b/app/src/main/res/layout/fragment_new_playlist.xml
@@ -26,61 +26,77 @@
         app:layout_constraintStart_toEndOf="@id/btnBack"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/coverPlaylist"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/containerCoverPlaylist"
         android:layout_width="@dimen/empty_dp"
         android:layout_height="@dimen/empty_dp"
         android:layout_marginHorizontal="@dimen/margin_24dp"
-        android:layout_marginVertical="32dp"
+        android:layout_marginVertical="@dimen/margin_32dp"
+
+        app:cardCornerRadius="@dimen/margin_8dp"
+        app:cardElevation="@dimen/empty_dp"
+
+        app:layout_constrainedHeight="true"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintDimensionRatio="1:1"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/headerText">
+
+        <ImageView
+        android:id="@+id/coverPlaylist"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@drawable/new_playlist_placeholder"
+        android:src="@drawable/new_playlist_placeholder"
         android:clickable="true"
         android:scaleType="centerCrop"
-        app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/headerText"
         app:srcCompat="@drawable/new_playlist_ico" />
+    </androidx.cardview.widget.CardView>
 
-    <EditText
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/edtxtName"
-        android:layout_width="match_parent"
+        style="@style/TextInputLayoutStyle"
+        android:layout_width="0dp"
+        android:layout_marginHorizontal="@dimen/margin_16dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="32dp"
-        android:background="@drawable/stroke_rectangle"
-        android:fontFamily="@font/ys_display_regular"
+        android:layout_marginTop="@dimen/margin_32dp"
+        android:theme="@style/TextInputLayoutStyle"
         android:hint="@string/playlist_name"
-        android:inputType="text"
-        android:maxLines="1"
-        android:minHeight="56dp"
-        android:padding="@dimen/margin_16dp"
-        android:textColor="?attr/colorOnPrimary"
-        android:textCursorDrawable="@drawable/cursor_color"
-        android:textSize="@dimen/text_size_16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/coverPlaylist" />
+        app:layout_constraintTop_toBottomOf="@id/containerCoverPlaylist">
 
-    <EditText
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_edit_text_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:maxLines="1" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/edtxtDescription"
-        android:layout_width="match_parent"
+        style="@style/TextInputLayoutStyle"
+        android:layout_width="@dimen/empty_dp"
+        android:layout_marginHorizontal="@dimen/margin_16dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="17dp"
-        android:background="@drawable/stroke_rectangle"
-        android:fontFamily="@font/ys_display_regular"
+        android:layout_marginTop="@dimen/margin_17dp"
+        android:theme="@style/TextInputLayoutStyle"
         android:hint="@string/playlist_description"
-        android:inputType="text"
-        android:minHeight="56dp"
-        android:minLines="1"
-        android:padding="@dimen/margin_16dp"
-        android:textColor="?attr/colorOnPrimary"
-        android:textCursorDrawable="@drawable/cursor_color"
-        android:textSize="@dimen/text_size_16sp"
-        app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edtxtName" />
+        app:layout_constraintTop_toBottomOf="@id/edtxtName">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_edit_text_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:maxLines="1" />
+    </com.google.android.material.textfield.TextInputLayout>
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnCreatePlaylist"
