--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,6 @@
     <color name="Track_List_Under_Name_Color">@color/YP_Grey</color>error_search_icon
     <color name="Error_Search_Icon">@color/YP_Black</color>
     <color name="Bottom_Sheet_Holder">@color/YP_Light</color>
+    <color name="Alert_Button_Text">@color/YP_Black</color>
+    <color name="Input_Playlist">@color/YP_Grey</color>
 </resources>
