--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -63,11 +63,6 @@
         <item name="trackTint">@color/Switch_track</item>
     </style>
 
-    <style name="DialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="colorPrimary">?attr/colorOnPrimary</item>
-    </style>
-
-
     <style name = "SearchEditViewStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="tint">@color/Search_Hint_Color</item>
@@ -205,6 +200,17 @@
         <item name="fontFamily">@font/ys_display_medium</item>
         <item name="android:layout_gravity">center</item>
 
+    </style>
+
+
+    <style name="TextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxStrokeColor">@color/YP_Blue</item>
+        <item name="hintTextColor">@color/YP_Blue</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:textColorHint">?attr/colorOnPrimary</item>
+        <item name="colorControlActivated">@color/YP_Blue</item>
+        <item name="android:minHeight">56dp</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
     </style>
 
 </resources>
