49-ий commit 22-ый спринт. исправление замечаний

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="Bottom_Sheet_Holder">@color/YP_Light</color>
     <color name="Alert_Button_Text">@color/YP_Black</color>
     <color name="Input_Playlist">@color/YP_Grey</color>
+    <color name="Placeholder_Playlist">@color/YP_White</color>
 </resources>
