--- a/app/src/main/res/drawable/new_playlist_placeholder.xml
+++ b/app/src/main/res/drawable/new_playlist_placeholder.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
-        <shape xmlns:android="http://schemas.android.com/apk/res/android"
-            android:shape="rectangle">
+        <shape android:shape="rectangle">
             <stroke
                 android:width="1dp"
                 android:color="@color/YP_Grey"
