--- a/app/src/main/res/layout/fragment_new_playlist.xml
+++ b/app/src/main/res/layout/fragment_new_playlist.xml
@@ -32,6 +32,7 @@
         android:layout_height="@dimen/empty_dp"
         android:layout_marginHorizontal="@dimen/margin_24dp"
         android:layout_marginVertical="@dimen/margin_32dp"
+        android:background="@drawable/new_playlist_placeholder"
 
         app:cardCornerRadius="@dimen/margin_8dp"
         app:cardElevation="@dimen/empty_dp"
@@ -48,11 +49,10 @@
         android:id="@+id/coverPlaylist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/new_playlist_placeholder"
+            android:background="?attr/colorPrimary"
         android:src="@drawable/new_playlist_placeholder"
         android:clickable="true"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/new_playlist_ico" />
+            android:scaleType="centerCrop" />
     </androidx.cardview.widget.CardView>
 
     <com.google.android.material.textfield.TextInputLayout
