--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -20,4 +20,5 @@
     <color name="Bottom_Sheet_Holder">@color/YP_White</color>
     <color name="Alert_Button_Text">@color/YP_White</color>
     <color name="Input_Playlist">@color/YP_White</color>
+    <color name="Placeholder_Playlist">@color/YP_Black</color>
 </resources>
