--- a/app/src/main/res/layout/fragment_view_playlist.xml
+++ b/app/src/main/res/layout/fragment_view_playlist.xml
@@ -55,7 +55,6 @@
             android:layout_marginStart="@dimen/margin_16dp"
             android:layout_marginTop="@dimen/margin_8dp"
             android:fontFamily="@font/ys_display_regular"
-            android:maxLines="1"
             android:textColor="@color/YP_Black"
             android:textSize="@dimen/text_size_18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -131,7 +130,7 @@
         android:id="@+id/standard_bottom_sheet"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/stroke_rectangle"
+        android:background="@drawable/round_corner_color"
         android:orientation="vertical"
         app:behavior_hideable="false"
         app:behavior_peekHeight="@dimen/bottom_sheet_peek_height_playlist"
@@ -172,15 +171,15 @@
             android:layout_marginHorizontal="@dimen/margin_8dp"
             android:visibility="visible" />
 
-
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/standard_bottom_sheet_menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/stroke_rectangle"
+        android:background="@drawable/round_corner_color"
         android:orientation="vertical"
+        tools:visibility="gone"
         app:behavior_hideable="true"
         app:behavior_peekHeight="@dimen/bottom_sheet_peek_height_menu"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
@@ -228,7 +227,6 @@
                 android:text="@string/bottom_sheet_menu_delete" />
 
         </LinearLayout>
-
 
     </LinearLayout>
 
