--- a/app/src/main/res/layout/fragment_view_playlist.xml
+++ b/app/src/main/res/layout/fragment_view_playlist.xml
@@ -52,7 +52,7 @@
             android:id="@+id/playlistDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_16dp"
+            android:layout_marginHorizontal="@dimen/margin_16dp"
             android:layout_marginTop="@dimen/margin_8dp"
             android:fontFamily="@font/ys_display_regular"
             android:textColor="@color/YP_Black"
